# zephyrboards

./: .gitignore  .gitmodules  CMakeLists.txt  Kconfig  README.md  west.yml
.github/workflows/: revshell.yml
boards/arm/6wire/: 6wire.dts  6wire_defconfig  CmakeLists.txt  Kconfig.board  Kconfig.defconfig  pinmux.c
boards/arm/efm32wg/: Kconfig.board  Kconfig.defconfig  efm32wg.dts  efm32wg332f256.dtsi  efm32wg_defconfig
boards/arm/jabican_usb_pro/: CMakeLists.txt  Kconfig.board  Kconfig.defconfig  hal_nxp.patch  jabican_usb_pro-pinctrl.dtsi  jabican_usb_pro.dts  jabican_usb_pro_defconfig  mcuboot.conf  zephyr.patch
boards/arm/k66f_breakout/: CMakeLists.txt  Kconfig.board  Kconfig.defconfig  board.cmake  k66f_breakout-pinctrl.dtsi  k66f_breakout.dts  k66f_breakout_defconfig  pinmux.c
boards/arm/k66f_usbhs/: CMakeLists.txt  Kconfig.board  Kconfig.defconfig  board.c  board.cmake  k66f_usbhs-pinctrl.dtsi  k66f_usbhs.dts  k66f_usbhs_defconfig  zephyr.patch
boards/arm/leveler/: Kconfig.board  Kconfig.defconfig  board.cmake  leveler.dts  leveler_defconfig
boards/arm/lpc845_lin/: CMakeLists.txt  Kconfig.board  Kconfig.defconfig  board.c  lpc845_lin.dts  lpc845_lin_defconfig  pre_dt_board.cmake
boards/arm/lpc845brk/: CMakeLists.txt  Kconfig.board  Kconfig.defconfig  board.cmake  lpc845brk.dts  lpc845brk_defconfig
boards/arm/nogusb/: CMakeLists.txt  Kconfig.board  Kconfig.defconfig  board.cmake  mcuboot.conf  nogusb.dts  nogusb.patch  nogusb_defconfig
boards/arm/stm32_esc/: CMakeLists.txt  Kconfig.board  Kconfig.defconfig  board.cmake  stm32_esc.dts  stm32_esc_defconfig  zephyr.patch
boards/nxp/lpc845brk/: Kconfig.lpc845brk  board.cmake  board.yml  lpc845brk.dts
boards/others/6wire/: 6wire-pinctrl.dtsi  6wire.dts  6wire_defconfig  Kconfig.6wire  board.cmake  board.yml
boards/others/efm32wg/: Kconfig.defconfig  Kconfig.efm32wg  board.cmake  board.yml  efm32wg.dts  efm32wg_defconfig
boards/others/jabican_usb_pro/: Kconfig.defconfig  Kconfig.jabican_usb_pro  board.cmake  board.yml  jabican_usb_pro-pinctrl.dtsi  jabican_usb_pro.dts  jabican_usb_pro_defconfig  mcuboot.conf  zephyr.patch
boards/others/k66f_breakout/: Kconfig.defconfig  Kconfig.k66f_breakout  board.yml  k66f_breakout-pinctrl.dtsi  k66f_breakout.dts  k66f_breakout_defconfig
drivers/: CMakeLists.txt  Kconfig
drivers/adc/: CMakeLists.txt  Kconfig  Kconfig.ch32  adc_ch32.c
drivers/clock_control/: CMakeLists.txt  Kconfig  Kconfig.lpc84x  clock_control_lpc84x.c
drivers/gpio/: CMakeLists.txt  Kconfig  Kconfig.ch32  Kconfig.lpc84x  gpio_ch32.c  gpio_lpc84x.c  gpio_utils.h  iocon_map_lpc84x.h
drivers/lin/: CMakeLists.txt  Kconfig  Kconfig.uart  lin_common.c  lin_uart.c
drivers/sdhc/: CMakeLists.txt  Kconfig  Kconfig.mcux_sdhc  mcux_sdhc.c
drivers/serial/: CMakeLists.txt  Kconfig  Kconfig.ch32  Kconfig.lpc84x  ch32_uart.c  lpc84x_uart.c
drivers/swm/: CMakeLists.txt  Kconfig  Kconfig.lpc84x  swm_lpc84x.c
drivers/usb/: CMakeLists.txt  Kconfig
drivers/usb_c/: CMakeLists.txt  Kconfig
dts/bindings/: vendor-prefixes.txt
examples/k66f_test/: CMakeLists.txt  prj.conf
examples/lpc845brk_test/: CMakeLists.txt  prj.conf
examples/lpc845brk_test/src/: main.c
examples/nogusb_test/: CMakeLists.txt  nogusb.overlay  nogusb.patch  prj.conf
examples/nogusb_test/src/: main.c
include/drivers/: swm.h
samples/6wire/: CMakeLists.txt  prj.conf
samples/apps/: README.md
samples/apps/rubberducky/: CMakeLists.txt  prj.conf  zephyr.patch
samples/apps/rubberducky/inc/: error.h  hid.h  payload.h  rgb.h
samples/apps/rubberducky/payloads/: common.h  example.cpp  shell.cpp
samples/apps/rubberducky/payloads/revshell/: Cargo.toml
samples/apps/rubberducky/payloads/revshell/.cargo/: config.toml
samples/apps/rubberducky/payloads/revshell/certs/: cert.pem  root-ca.pem
samples/apps/rubberducky/payloads/revshell/src/: client.rs  server.rs
samples/apps/rubberducky/src/: bos_desc.h  error.cpp  hid.cpp  main.cpp  payload.cpp  rgb.cpp
samples/boards/: README.md
samples/cpp_test/: CMakeLists.txt  prj.conf
samples/efm32wg_test/: CMakeLists.txt
samples/fakeusbdrive/: prj.conf
samples/generic_test/: CMakeLists.txt  prj.conf
samples/generic_test/boards/: efm32wg.overlay  jabican_usb_pro.conf  k66f_breakout.conf  k66f_usbhs.conf  k66f_usbhs.overlay  lpc845brk.overlay  nogusb.conf  nogusb.overlay  usb_pdmon.overlay
samples/generic_test/dts/bindings/: test,adc.yaml  test,dac.yaml  test.yaml
samples/generic_test/src/: adc_test.c  button_test.c  can_test.c  common.h  dac_test.c  i2c_test.c  led_test.c  main.c  network_test.c  sd_test.c  spi_test.c  uart_test.c  usb_test.c
samples/k66f_test/: CMakeLists.txt  prj.conf
samples/leveling/: CMakeLists.txt  prj.conf
samples/lin_test/: prj.conf
samples/lpc845brk_test/: CMakeLists.txt
samples/nogusb_test/: CMakeLists.txt  prj.conf
samples/stm32_esc/: CMakeLists.txt  prj.conf
samples/tests/: README.md
soc/nxp/lpc/: Kconfig  (+2 more)
soc/riscv/: CMakeLists.txt
zephyr/: module.yml
(+177 files in other folders)
